@@ -15,7 +15,7 @@
 	</oaf_server>
 
 	<oaf_server iid="OAFIID:GNOME_Gedit_ViewerFactory"
-		    type="shlib" location="libgedit-control.so">
+		    type="shlib" location="libgedit-control">
 		<oaf_attribute name="repo_ids" type="stringv">
 			<item value="IDL:Bonobo/GenericFactory:1.0"/>
 		</oaf_attribute>
