@@ -1,3 +1,8 @@
+2003-04-18  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
+
+	* data/GNOME_Gedit.server.in: Remove the ".so" extension from the
+	viewer factory so it works on other platforms.
+
 2003-04-18  Paolo Maggi  <paolo.maggi@polito.it>
 
 	* configure.in:
